Define clean up steps and clean up code