@@ -1,12 +1,21 @@
 package jdos.hardware;
 
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.net.DatagramPacket;
+import java.net.DatagramSocket;
+import java.net.InetAddress;
+
 import jdos.cpu.CPU_Regs;
 import jdos.cpu.Callback;
 import jdos.dos.Dos_misc;
 import jdos.dos.Dos_system;
 import jdos.dos.Dos_tables;
 import jdos.dos.drives.Drive_virtual;
-import jdos.gui.Main;
+import jdos.gui.MainBase;
 import jdos.misc.Log;
 import jdos.misc.Program;
 import jdos.misc.setup.Config;
@@ -16,127 +25,123 @@ import jdos.misc.setup.Section_prop;
 import jdos.util.IntRef;
 import jdos.util.StringHelper;
 
-import java.io.*;
-import java.net.DatagramPacket;
-import java.net.DatagramSocket;
-import java.net.InetAddress;
-
 public class IPX extends Module_base {
     static final int SOCKETTABLESIZE = 150; // DOS IPX driver was limited to 150 open sockets
     static final int IPXBUFFERSIZE = 1424;
 
     // In Use Flag codes
-    static private final int USEFLAG_AVAILABLE = 0x00;
-    static private final int USEFLAG_AESTEMP = 0xe0;
-    static private final int USEFLAG_IPXCRIT = 0xf8;
-    static private final int USEFLAG_SPXLISTEN = 0xf9;
-    static private final int USEFLAG_PROCESSING = 0xfa;
-    static private final int USEFLAG_HOLDING = 0xfb;
-    static private final int USEFLAG_AESWAITING = 0xfc;
-    static private final int USEFLAG_AESCOUNT = 0xfd;
-    static private final int USEFLAG_LISTENING = 0xfe;
-    static private final int USEFLAG_SENDING = 0xff;
+    private static final int USEFLAG_AVAILABLE = 0x00;
+    private static final int USEFLAG_AESTEMP = 0xe0;
+    private static final int USEFLAG_IPXCRIT = 0xf8;
+    private static final int USEFLAG_SPXLISTEN = 0xf9;
+    private static final int USEFLAG_PROCESSING = 0xfa;
+    private static final int USEFLAG_HOLDING = 0xfb;
+    private static final int USEFLAG_AESWAITING = 0xfc;
+    private static final int USEFLAG_AESCOUNT = 0xfd;
+    private static final int USEFLAG_LISTENING = 0xfe;
+    private static final int USEFLAG_SENDING = 0xff;
 
     // Completion codes
-    static private final int COMP_SUCCESS = 0x00;
-    static private final int COMP_REMOTETERM = 0xec;
-    static private final int COMP_DISCONNECT = 0xed;
-    static private final int COMP_INVALIDID = 0xee;
-    static private final int COMP_SPXTABLEFULL = 0xef;
-    static private final int COMP_EVENTNOTCANCELED = 0xf9;
-    static private final int COMP_NOCONNECTION = 0xfa;
-    static private final int COMP_CANCELLED = 0xfc;
-    static private final int COMP_MALFORMED = 0xfd;
-    static private final int COMP_UNDELIVERABLE = 0xfe;
-    static private final int COMP_HARDWAREERROR = 0xff;
-    static private final ipxnetaddr localIpxAddr = new ipxnetaddr();
-    static private final packetBuffer incomingPacket = new packetBuffer();
-    static private/*Bit32u*/ int udpPort;
-    static private boolean isIpxServer;
-    static private boolean isIpxConnected;
-    static private InetAddress ipxServConnIp;            // IPAddress for client connection to server
-    static private DatagramSocket ipxClientSocket;
+    private static final int COMP_SUCCESS = 0x00;
+    private static final int COMP_REMOTETERM = 0xec;
+    private static final int COMP_DISCONNECT = 0xed;
+    private static final int COMP_INVALIDID = 0xee;
+    private static final int COMP_SPXTABLEFULL = 0xef;
+    private static final int COMP_EVENTNOTCANCELED = 0xf9;
+    private static final int COMP_NOCONNECTION = 0xfa;
+    private static final int COMP_CANCELLED = 0xfc;
+    private static final int COMP_MALFORMED = 0xfd;
+    private static final int COMP_UNDELIVERABLE = 0xfe;
+    private static final int COMP_HARDWAREERROR = 0xff;
+    private static final ipxnetaddr localIpxAddr = new ipxnetaddr();
+    private static final packetBuffer incomingPacket = new packetBuffer();
+    private static/*Bit32u*/ int udpPort;
+    private static boolean isIpxServer;
+    private static boolean isIpxConnected;
+    private static InetAddress ipxServConnIp; // IPAddress for client connection to server
+    private static DatagramSocket ipxClientSocket;
     private static /*RealPt*/ int ipx_callback;
-    private static final Dos_system.MultiplexHandler IPX_Multiplex = new Dos_system.MultiplexHandler() {
-        public boolean call() {
-            if (CPU_Regs.reg_eax.word() != 0x7a00) return false;
-            CPU_Regs.reg_eax.low(0xff);
-            CPU_Regs.SegSet16ES(Memory.RealSeg(ipx_callback));
-            CPU_Regs.reg_edi.word(Memory.RealOff(ipx_callback));
+    private static final Dos_system.MultiplexHandler IPX_Multiplex = () -> {
+        if (CPU_Regs.reg_eax.word() != 0x7a00)
+            return false;
+        CPU_Regs.reg_eax.low(0xff);
+        CPU_Regs.SegSet16ES(Memory.RealSeg(ipx_callback));
+        CPU_Regs.reg_edi.word(Memory.RealOff(ipx_callback));
 
-            //CPU_Regs.reg_ebx.word(RealOff(IPXVERpointer));
-            //CPU_Regs.reg_ecx.word(RealSeg(ipx_callback));
-            return true;
-        }
+        //CPU_Regs.reg_ebx.word(RealOff(IPXVERpointer));
+        //CPU_Regs.reg_ecx.word(RealSeg(ipx_callback));
+        return true;
     };
     private static /*Bit16u*/ int socketCount;
     private static final /*Bit16u*/ int[] opensockets = new int[SOCKETTABLESIZE];
     //#ifdef IPX_DEBUGMSG
-    static private /*Bitu*/ int ECBSerialNumber = 0;
-    static private /*Bitu*/ int ECBAmount = 0;
-    static private ECBClass ECBList;  // Linked list of ECB's
-    static private ECBClass ESRList;    // ECBs waiting to be ESR notified
-    private static final Pic.PIC_EventHandler IPX_AES_EventHandler = new Pic.PIC_EventHandler() {
-        public void call(/*Bitu*/int param) {
-            ECBClass tmpECB = ECBList;
-            ECBClass tmp2ECB;
-            while (tmpECB != null) {
-                tmp2ECB = tmpECB.nextECB;
-                if (tmpECB.iuflag == USEFLAG_AESCOUNT && param == tmpECB.ECBAddr) {
-                    tmpECB.setCompletionFlag(COMP_SUCCESS);
-                    tmpECB.setInUseFlag(USEFLAG_AVAILABLE);
-                    tmpECB.NotifyESR();
-                    // LOG_IPX("AES Notification: ECB S/N %d",tmpECB.SerialNumber);
-                    return;
-                }
-                tmpECB = tmp2ECB;
+    private static /*Bitu*/ int ECBSerialNumber = 0;
+    private static /*Bitu*/ int ECBAmount = 0;
+    private static ECBClass ECBList; // Linked list of ECB's
+    private static ECBClass ESRList; // ECBs waiting to be ESR notified
+    private static final Pic.PIC_EventHandler IPX_AES_EventHandler = param -> {
+        ECBClass tmpECB = ECBList;
+        ECBClass tmp2ECB;
+        while (tmpECB != null) {
+            tmp2ECB = tmpECB.nextECB;
+            if (tmpECB.iuflag == USEFLAG_AESCOUNT && param == tmpECB.ECBAddr) {
+                tmpECB.setCompletionFlag(COMP_SUCCESS);
+                tmpECB.setInUseFlag(USEFLAG_AVAILABLE);
+                tmpECB.NotifyESR();
+                // LOG_IPX("AES Notification: ECB S/N %d",tmpECB.SerialNumber);
+                return;
             }
-            Log.log_msg("!!!! Rouge AES !!!!");
+            tmpECB = tmp2ECB;
         }
+        Log.log_msg("!!!! Rouge AES !!!!");
     };
     private static final Callback.Handler IPX_ESRHandler = new Callback.Handler() {
+        @Override
         public /*Bitu*/int call() {
             if (Config.IPX_DEBUGMSG)
                 Log.log_msg("ESR: >>>>>>>>>>>>>>>");
             while (ESRList != null) {
                 // LOG_IPX("ECB: SN%7d notified.", ESRList.SerialNumber);
-                if (ESRList.databuffer != null) ESRList.writeData();
+                if (ESRList.databuffer != null)
+                    ESRList.writeData();
                 if (ESRList.getESRAddr() != 0) {
                     // setup registers
                     CPU_Regs.SegSet16ES(Memory.RealSeg(ESRList.ECBAddr));
                     CPU_Regs.reg_esi.word(Memory.RealOff(ESRList.ECBAddr));
                     CPU_Regs.reg_eax.low(0xff);
-                    Callback.CALLBACK_RunRealFar(Memory.RealSeg(ESRList.getESRAddr()), Memory.RealOff(ESRList.getESRAddr()));
+                    Callback.CALLBACK_RunRealFar(Memory.RealSeg(ESRList.getESRAddr()),
+                        Memory.RealOff(ESRList.getESRAddr()));
                 }
                 ESRList.close();
-            }    // while
+            } // while
 
-            IO.IO_WriteB(0xa0, 0x63);    //EOI11
-            IO.IO_WriteB(0x20, 0x62);    //EOI2
+            IO.IO_WriteB(0xa0, 0x63); //EOI11
+            IO.IO_WriteB(0x20, 0x62); //EOI2
             if (Config.IPX_DEBUGMSG)
                 Log.log_msg("ESR: <<<<<<<<<<<<<<<");
             return Callback.CBRET_NONE;
         }
 
+        @Override
         public String getName() {
             return "IPX ESR";
         }
     };
     private static ReceiverThread receiverThread;
-    private static final Timer.TIMER_TickHandler IPX_ClientLoop = new Timer.TIMER_TickHandler() {
-        public void call() {
-            int length = receiverThread.next(null);
-            if (length > 0)
-                receivePacket(receiverThread.recvBuffer, length);
-        }
+    private static final Timer.TIMER_TickHandler IPX_ClientLoop = () -> {
+        int length = receiverThread.next(null);
+        if (length > 0)
+            receivePacket(receiverThread.recvBuffer, length);
     };
     // Entrypoint handler
     final static private Callback.Handler IPX_Handler = new Callback.Handler() {
+        @Override
         public /*Bitu*/int call() {
             handleIpxRequest();
             return Callback.CBRET_NONE;
         }
 
+        @Override
         public String getName() {
             return "IPX";
         }
@@ -144,32 +149,24 @@ public class IPX extends Module_base {
     //#endif
     // INT 7A handler
     final static private Callback.Handler IPX_IntHandler = new Callback.Handler() {
+        @Override
         public /*Bitu*/int call() {
             handleIpxRequest();
             return Callback.CBRET_NONE;
         }
 
+        @Override
         public String getName() {
             return "IPX INT 7A";
         }
     };
-    static private final Program.PROGRAMS_Main IPXNET_ProgramStart = new Program.PROGRAMS_Main() {
-        public Program call() {
-            return new IPXNET();
-        }
-    };
+    private static final Program.PROGRAMS_Main IPXNET_ProgramStart = () -> new IPXNET();
     private static /*Bit16u*/ int dospage;
     private static IPX test;
-    public static Section.SectionFunction IPX_ShutDown = new Section.SectionFunction() {
-        public void call(Section section) {
-            test.close();
-        }
-    };
-    public static Section.SectionFunction IPX_Init = new Section.SectionFunction() {
-        public void call(Section section) {
-            test = new IPX(section);
-            section.AddDestroyFunction(IPX_ShutDown, true);
-        }
+    public static Section.SectionFunction IPX_ShutDown = section -> test.close();
+    public static Section.SectionFunction IPX_Init = section -> {
+        test = new IPX(section);
+        section.AddDestroyFunction(IPX_ShutDown, true);
     };
 
     //static RealPt IPXVERpointer;
@@ -181,7 +178,8 @@ public class IPX extends Module_base {
     private IPX(Section configuration) {
         super(configuration);
         Section_prop section = (Section_prop) configuration;
-        if (!section.Get_bool("ipx")) return;
+        if (!section.Get_bool("ipx"))
+            return;
 
         ECBList = null;
         ESRList = null;
@@ -201,7 +199,8 @@ public class IPX extends Module_base {
         /*Bit16u*/
         int call_ipxesr1 = callback_esr.Get_callback();
 
-        if (dospage == 0) dospage = Dos_tables.DOS_GetMemory(2); // can not be freed yet
+        if (dospage == 0)
+            dospage = Dos_tables.DOS_GetMemory(2); // can not be freed yet
 
         /*PhysPt*/
         int phyDospage = Memory.PhysMake(dospage, 0);
@@ -210,25 +209,25 @@ public class IPX extends Module_base {
             Log.log_msg("ESR callback address: " + Long.toString(phyDospage, 16) + ", HandlerID " + call_ipxesr1);
 
         //save registers
-        Memory.phys_writeb(phyDospage + 0, 0xFA);    // CLI
-        Memory.phys_writeb(phyDospage + 1, 0x60);    // PUSHA
-        Memory.phys_writeb(phyDospage + 2, 0x1E);    // PUSH DS
-        Memory.phys_writeb(phyDospage + 3, 0x06);    // PUSH ES
+        Memory.phys_writeb(phyDospage + 0, 0xFA); // CLI
+        Memory.phys_writeb(phyDospage + 1, 0x60); // PUSHA
+        Memory.phys_writeb(phyDospage + 2, 0x1E); // PUSH DS
+        Memory.phys_writeb(phyDospage + 3, 0x06); // PUSH ES
         Memory.phys_writew(phyDospage + 4, 0xA00F); // PUSH FS
         Memory.phys_writew(phyDospage + 6, 0xA80F); // PUSH GS
 
         // callback
-        Memory.phys_writeb(phyDospage + 8, 0xFE);  // GRP 4
-        Memory.phys_writeb(phyDospage + 9, 0x38);  // Extra Callback instruction
-        Memory.phys_writew(phyDospage + 10, call_ipxesr1);        // Callback identifier
+        Memory.phys_writeb(phyDospage + 8, 0xFE); // GRP 4
+        Memory.phys_writeb(phyDospage + 9, 0x38); // Extra Callback instruction
+        Memory.phys_writew(phyDospage + 10, call_ipxesr1); // Callback identifier
 
         // register recreation
         Memory.phys_writew(phyDospage + 12, 0xA90F); // POP GS
         Memory.phys_writew(phyDospage + 14, 0xA10F); // POP FS
-        Memory.phys_writeb(phyDospage + 16, 0x07);    // POP ES
-        Memory.phys_writeb(phyDospage + 17, 0x1F);    // POP DS
-        Memory.phys_writeb(phyDospage + 18, 0x61);    // POPA
-        Memory.phys_writeb(phyDospage + 19, 0xCF);    // IRET: restores flags, CS, IP
+        Memory.phys_writeb(phyDospage + 16, 0x07); // POP ES
+        Memory.phys_writeb(phyDospage + 17, 0x1F); // POP DS
+        Memory.phys_writeb(phyDospage + 18, 0x61); // POPA
+        Memory.phys_writeb(phyDospage + 19, 0xCF); // IRET: restores flags, CS, IP
 
         // IPX version 2.12
         //phys_writeb(phyDospage+27,(Bit8u)0x2);
@@ -239,19 +238,20 @@ public class IPX extends Module_base {
         int ESRRoutineBase = Memory.RealMake(dospage, 0);
 
         // Interrupt enabling
-        Memory.RealSetVec(0x73, ESRRoutineBase, old_73_vector);    // IRQ11
-        IO.IO_WriteB(0xa1, IO.IO_ReadB(0xa1) & (~8));            // enable IRQ11
+        Memory.RealSetVec(0x73, ESRRoutineBase, old_73_vector); // IRQ11
+        IO.IO_WriteB(0xa1, IO.IO_ReadB(0xa1) & ~8); // enable IRQ11
 
         Program.PROGRAMS_MakeFile("IPXNET.COM", IPXNET_ProgramStart);
     }
 
     private static /*Bit16u*/int swapByte(/*Bit16u*/int sockNum) {
-        return (((sockNum >>> 8) & 0xFF) | ((sockNum & 0xFF) << 8));
+        return sockNum >>> 8 & 0xFF | (sockNum & 0xFF) << 8;
     }
 
     private static boolean sockInUse(/*Bit16u*/int sockNum) {
         for (/*Bitu*/int i = 0; i < socketCount; i++) {
-            if (opensockets[i] == sockNum) return true;
+            if (opensockets[i] == sockNum)
+                return true;
         }
         return false;
     }
@@ -269,7 +269,8 @@ public class IPX extends Module_base {
         if (sockNum == 0x0000) {
             // Dynamic socket allocation
             sockAlloc = 0x4002;
-            while (sockInUse(sockAlloc) && (sockAlloc < 0x7fff)) sockAlloc++;
+            while (sockInUse(sockAlloc) && sockAlloc < 0x7fff)
+                sockAlloc++;
             if (sockAlloc > 0x7fff) {
                 // I have no idea how this could happen if the IPX driver
                 // is limited to 150 open sockets at a time
@@ -287,7 +288,7 @@ public class IPX extends Module_base {
         socketCount++;
 
         CPU_Regs.reg_eax.low(0x00); // Success
-        CPU_Regs.reg_edx.word(swapByte(sockNum));  // Convert back to big-endian
+        CPU_Regs.reg_edx.word(swapByte(sockNum)); // Convert back to big-endian
     }
 
     private static void CloseSocket() {
@@ -297,7 +298,8 @@ public class IPX extends Module_base {
         ECBClass tmp2ECB = ECBList;
 
         sockNum = swapByte(CPU_Regs.reg_edx.word());
-        if (!sockInUse(sockNum)) return;
+        if (!sockInUse(sockNum))
+            return;
 
         for (i = 0; i < socketCount - 1; i++) {
             if (opensockets[i] == sockNum) {
@@ -325,31 +327,34 @@ public class IPX extends Module_base {
         ECBClass tmpECB;
 
         switch (CPU_Regs.reg_ebx.word()) {
-            case 0x0000:    // Open socket
+            case 0x0000: // Open socket
                 OpenSocket();
-                Log.log_msg(StringHelper.sprintf("IPX: Open socket %4x", new Object[]{new Integer(swapByte(CPU_Regs.reg_edx.word()))}));
+                Log.log_msg(StringHelper.sprintf("IPX: Open socket %4x",
+                    new Object[] { Integer.valueOf(swapByte(CPU_Regs.reg_edx.word())) }));
                 break;
-            case 0x0001:    // Close socket
-                Log.log_msg(StringHelper.sprintf("IPX: Close socket %4x", new Object[]{new Integer(swapByte(CPU_Regs.reg_edx.word()))}));
+            case 0x0001: // Close socket
+                Log.log_msg(StringHelper.sprintf("IPX: Close socket %4x",
+                    new Object[] { Integer.valueOf(swapByte(CPU_Regs.reg_edx.word())) }));
                 CloseSocket();
                 break;
-            case 0x0002:    // get local target
+            case 0x0002: // get local target
                 // es:si
                 // Currently no support for multiple networks
 
                 for (/*Bitu*/int i = 0; i < 6; i++)
-                    Memory.real_writeb(CPU_Regs.reg_esVal.dword, CPU_Regs.reg_edi.word() + i, Memory.real_readb(CPU_Regs.reg_esVal.dword, CPU_Regs.reg_esi.word() + i + 4));
+                    Memory.real_writeb(CPU_Regs.reg_esVal.dword, CPU_Regs.reg_edi.word() + i,
+                        Memory.real_readb(CPU_Regs.reg_esVal.dword, CPU_Regs.reg_esi.word() + i + 4));
 
-                CPU_Regs.reg_ecx.word(1);        // time ticks expected
-                CPU_Regs.reg_eax.low(0x00);    //success
+                CPU_Regs.reg_ecx.word(1); // time ticks expected
+                CPU_Regs.reg_eax.low(0x00); //success
                 break;
 
-            case 0x0003:        // Send packet
+            case 0x0003: // Send packet
                 tmpECB = new ECBClass(CPU_Regs.reg_esVal.dword, CPU_Regs.reg_esi.word());
                 if (!incomingPacket.connected) {
                     tmpECB.setInUseFlag(USEFLAG_AVAILABLE);
                     tmpECB.setCompletionFlag(COMP_UNDELIVERABLE);
-                    tmpECB.close();    // not notify?
+                    tmpECB.close(); // not notify?
                     CPU_Regs.reg_eax.low(0xff); // Failure
                 } else {
                     tmpECB.setInUseFlag(USEFLAG_SENDING);
@@ -359,16 +364,16 @@ public class IPX extends Module_base {
                 }
 
                 break;
-            case 0x0004:  // Listen for packet
+            case 0x0004: // Listen for packet
                 tmpECB = new ECBClass(CPU_Regs.reg_esVal.dword, CPU_Regs.reg_esi.word());
                 // LOG_IPX("ECB: SN%7d RECEIVE.", tmpECB.SerialNumber);
-                if (!sockInUse(tmpECB.getSocket())) {  // Socket is not open
+                if (!sockInUse(tmpECB.getSocket())) { // Socket is not open
                     CPU_Regs.reg_eax.low(0xff);
                     tmpECB.setInUseFlag(USEFLAG_AVAILABLE);
                     tmpECB.setCompletionFlag(COMP_HARDWAREERROR);
                     tmpECB.close();
                 } else {
-                    CPU_Regs.reg_eax.low(0x00);  // Success
+                    CPU_Regs.reg_eax.low(0x00); // Success
                     tmpECB.setInUseFlag(USEFLAG_LISTENING);
                     /*LOG_IPX("IPX: Listen for packet on 0x%4x - ESR address %4x:%4x",
                         tmpECB.getSocket(),
@@ -377,17 +382,18 @@ public class IPX extends Module_base {
                 }
                 break;
 
-            case 0x0005:    // SCHEDULE IPX EVENT
-            case 0x0007:    // SCHEDULE SPECIAL IPX EVENT
+            case 0x0005: // SCHEDULE IPX EVENT
+            case 0x0007: // SCHEDULE SPECIAL IPX EVENT
             {
                 tmpECB = new ECBClass(CPU_Regs.reg_esVal.dword, CPU_Regs.reg_esi.word());
                 // LOG_IPX("ECB: SN%7d AES. T=%fms.", tmpECB.SerialNumber,
                 //	(1000.0f/(1193182.0f/65536.0f))*(float)CPU_Regs.reg_eax.word();
-                Pic.PIC_AddEvent(IPX_AES_EventHandler, (1000.0f / (1193182.0f / 65536.0f)) * (float) CPU_Regs.reg_eax.word(), tmpECB.ECBAddr);
+                Pic.PIC_AddEvent(IPX_AES_EventHandler, 1000.0f / (1193182.0f / 65536.0f) * CPU_Regs.reg_eax.word(),
+                    tmpECB.ECBAddr);
                 tmpECB.setInUseFlag(USEFLAG_AESCOUNT);
                 break;
             }
-            case 0x0006:    // cancel operation
+            case 0x0006: // cancel operation
             {
                 /*RealPt*/
                 int ecbaddress = Memory.RealMake(CPU_Regs.reg_esVal.dword, CPU_Regs.reg_esi.word());
@@ -401,24 +407,25 @@ public class IPX extends Module_base {
                         tmpECB.setInUseFlag(USEFLAG_AVAILABLE);
                         tmpECB.setCompletionFlag(COMP_CANCELLED);
                         tmpECB.close();
-                        CPU_Regs.reg_eax.low(0);    // Success
+                        CPU_Regs.reg_eax.low(0); // Success
                         Log.log_msg("IPX: ECB canceled.");
                         return;
                     }
                     tmpECB = tmp2ECB;
                 }
-                CPU_Regs.reg_eax.low(0xff);    // Fail
+                CPU_Regs.reg_eax.low(0xff); // Fail
                 break;
             }
-            case 0x0008:        // Get interval marker
+            case 0x0008: // Get interval marker
                 CPU_Regs.reg_eax.word(Memory.mem_readw(0x46c)); // BIOS_TIMER
                 break;
-            case 0x0009:        // Get internetwork address
+            case 0x0009: // Get internetwork address
             {
-                Log.log_msg(StringHelper.sprintf("IPX: Get internetwork address %2x:%2x:%2x:%2x:%2x:%2x", new Object[]{
-                        new Integer(localIpxAddr.netnode[5] & 0xFF), new Integer(localIpxAddr.netnode[4] & 0xFF),
-                        new Integer(localIpxAddr.netnode[3] & 0xFF), new Integer(localIpxAddr.netnode[2] & 0xFF),
-                        new Integer(localIpxAddr.netnode[1] & 0xFF), new Integer(localIpxAddr.netnode[0] & 0xFF)}));
+                Log.log_msg(StringHelper.sprintf("IPX: Get internetwork address %2x:%2x:%2x:%2x:%2x:%2x", new Object[] {
+                    Integer.valueOf(localIpxAddr.netnode[5] & 0xFF), Integer.valueOf(localIpxAddr.netnode[4] & 0xFF),
+                    Integer.valueOf(localIpxAddr.netnode[3] & 0xFF), Integer.valueOf(localIpxAddr.netnode[2] & 0xFF),
+                    Integer.valueOf(localIpxAddr.netnode[1] & 0xFF),
+                    Integer.valueOf(localIpxAddr.netnode[0] & 0xFF) }));
 
                 //Bit8u * addrptr = (Bit8u *)&localIpxAddr;
                 byte[] addrptr = localIpxAddr.toByteArray();
@@ -426,57 +433,58 @@ public class IPX extends Module_base {
                     Memory.real_writeb(CPU_Regs.reg_esVal.dword, CPU_Regs.reg_esi.word() + i, addrptr[i]);
                 break;
             }
-            case 0x000a:        // Relinquish control
-                break;            // Idle thingy
+            case 0x000a: // Relinquish control
+                break; // Idle thingy
 
-            case 0x000b:        // Disconnect from Target
-                break;            // We don't even connect
+            case 0x000b: // Disconnect from Target
+                break; // We don't even connect
 
-            case 0x000d:        // get packet size
-                CPU_Regs.reg_ecx.word(0);        // retry count
-                CPU_Regs.reg_eax.word(1024);    // real implementation returns 1024
+            case 0x000d: // get packet size
+                CPU_Regs.reg_ecx.word(0); // retry count
+                CPU_Regs.reg_eax.word(1024); // real implementation returns 1024
                 break;
 
-            case 0x0010:        // SPX install check
-                CPU_Regs.reg_eax.low(0);        // SPX not installed
+            case 0x0010: // SPX install check
+                CPU_Regs.reg_eax.low(0); // SPX not installed
                 break;
 
-            case 0x001a:        // get driver maximum packet size
-                CPU_Regs.reg_ecx.word(0);        // retry count
-                CPU_Regs.reg_eax.word(IPXBUFFERSIZE);    // max packet size: something near the
+            case 0x001a: // get driver maximum packet size
+                CPU_Regs.reg_ecx.word(0); // retry count
+                CPU_Regs.reg_eax.word(IPXBUFFERSIZE); // max packet size: something near the
                 // ethernet packet size
                 break;
 
             default:
-                Log.log_msg(StringHelper.sprintf("Unhandled IPX function: %4x", new Object[]{new Integer(CPU_Regs.reg_ebx.word())}));
+                Log.log_msg(StringHelper.sprintf("Unhandled IPX function: %4x",
+                    new Object[] { Integer.valueOf(CPU_Regs.reg_ebx.word()) }));
                 break;
         }
     }
 
-    static private void write16(OutputStream os, int value) throws IOException {
-        os.write((value >> 8 & 0xFF));
+    private static void write16(OutputStream os, int value) throws IOException {
+        os.write(value >> 8 & 0xFF);
         os.write(value & 0xFF);
     }
 
-    static private void write32(OutputStream os, int value) throws IOException {
-        os.write((value >> 24 & 0xFF));
-        os.write((value >> 16 & 0xFF));
-        os.write((value >> 8 & 0xFF));
+    private static void write32(OutputStream os, int value) throws IOException {
+        os.write(value >> 24 & 0xFF);
+        os.write(value >> 16 & 0xFF);
+        os.write(value >> 8 & 0xFF);
         os.write(value & 0xFF);
     }
 
-    static private short read16(InputStream is) throws IOException {
+    private static short read16(InputStream is) throws IOException {
         int b = is.read() & 0xFF;
         int a = is.read() & 0xFF;
-        return (short) (a | (b << 8));
+        return (short) (a | b << 8);
     }
 
-    static private int read32(InputStream is) throws IOException {
+    private static int read32(InputStream is) throws IOException {
         int d = is.read() & 0xFF;
         int c = is.read() & 0xFF;
         int b = is.read() & 0xFF;
         int a = is.read() & 0xFF;
-        return a | (b << 8) | (c << 16) | (d << 24);
+        return a | b << 8 | c << 16 | d << 24;
     }
 
     private static void pingAck(IPaddress retAddr) {
@@ -488,7 +496,8 @@ public class IPX extends Module_base {
         regHeader.dest.addr.setPort(retAddr.port);
         regHeader.dest.socket = 2;
         regHeader.src.network = 0;
-        System.arraycopy(localIpxAddr.netnode, 0, regHeader.src.addr.byNode.node, 0, regHeader.src.addr.byNode.node.length);
+        System.arraycopy(localIpxAddr.netnode, 0, regHeader.src.addr.byNode.node, 0,
+            regHeader.src.addr.byNode.node.length);
         regHeader.src.socket = 2;
         regHeader.transControl = 0;
         regHeader.pType = 0x0;
@@ -512,7 +521,8 @@ public class IPX extends Module_base {
         regHeader.dest.addr.setPort(0xFFFF);
         regHeader.dest.socket = 2;
         regHeader.src.network = 0;
-        System.arraycopy(localIpxAddr.netnode, 0, regHeader.src.addr.byNode.node, 0, regHeader.src.addr.byNode.node.length);
+        System.arraycopy(localIpxAddr.netnode, 0, regHeader.src.addr.byNode.node, 0,
+            regHeader.src.addr.byNode.node.length);
         regHeader.src.socket = 2;
         regHeader.transControl = 0;
         regHeader.pType = 0x0;
@@ -538,8 +548,7 @@ public class IPX extends Module_base {
         // Check to see if ping packet
         if (useSocket == 0x2) {
             // Is this a broadcast?
-            if ((tmpHeader.dest.addr.host() == 0xffffffff) &&
-                    (tmpHeader.dest.addr.port() == 0xffff)) {
+            if (tmpHeader.dest.addr.host() == 0xffffffff && tmpHeader.dest.addr.port() == 0xffff) {
                 // Yes.  We should return the ping back to the sender
                 IPaddress tmpAddr = new IPaddress();
                 tmpAddr.host = tmpHeader.src.addr.host();
@@ -563,8 +572,9 @@ public class IPX extends Module_base {
             Log.log_msg("IPX: RX Packet loss!");
     }
 
-    static private void DisconnectFromServer(boolean unexpected) {
-        if (unexpected) Log.log_msg("IPX: Server disconnected unexpectedly");
+    private static void DisconnectFromServer(boolean unexpected) {
+        if (unexpected)
+            Log.log_msg("IPX: Server disconnected unexpectedly");
         if (incomingPacket.connected) {
             incomingPacket.connected = false;
             Timer.TIMER_DelTickHandler(IPX_ClientLoop);
@@ -629,13 +639,12 @@ public class IPX extends Module_base {
         //wordptr[0] = 0xffff;
         // Length
         outbuffer[3] = (byte) (packetsize & 0xFF);
-        outbuffer[2] = (byte) ((packetsize >> 8) & 0xFF);
+        outbuffer[2] = (byte) (packetsize >> 8 & 0xFF);
         // Source socket
         //wordptr[14] = swapByte(sendecb.getSocket());
 
         sendecb.getFragDesc(0, tmpFrag);
         Memory.real_writew(tmpFrag.segment, tmpFrag.offset + 2, swapByte(packetsize));
-
 
         /*Bit8u*/
         byte[] immedAddr = new byte[6];
@@ -647,11 +656,14 @@ public class IPX extends Module_base {
         boolean isloopback = true;
 
         for (/*Bitu*/int m = 0; m < 4; m++) {
-            if (localIpxAddr.netnum[m] != outbuffer[m + 0x6]) isloopback = false;
+            if (localIpxAddr.netnum[m] != outbuffer[m + 0x6])
+                isloopback = false;
         }
         for (/*Bitu*/int m = 0; m < 6; m++) {
-            if (localIpxAddr.netnode[m] != outbuffer[m + 0xa]) isloopback = false;
-            if (immedAddr[m] != (byte) 0xff) islocalbroadcast = false;
+            if (localIpxAddr.netnode[m] != outbuffer[m + 0xa])
+                isloopback = false;
+            if (immedAddr[m] != (byte) 0xff)
+                islocalbroadcast = false;
         }
         //LOG_IPX("SEND crc:%2x",packetCRC(&outbuffer[0], packetsize));
         if (!isloopback) {
@@ -731,10 +743,10 @@ public class IPX extends Module_base {
             int result;
             /*Bit32u*/
             long ticks, elapsed;
-            ticks = Main.GetTicks();
+            ticks = MainBase.GetTicks();
 
             while (true) {
-                elapsed = Main.GetTicks() - ticks;
+                elapsed = MainBase.GetTicks() - ticks;
                 if (elapsed > 5000) {
                     Log.log_msg("Timeout connecting to server at " + strAddr);
                     try {
@@ -748,13 +760,18 @@ public class IPX extends Module_base {
                 int length = receiverThread.next(null);
                 if (length > 0) {
                     regHeader.load(receiverThread.recvBuffer);
-                    System.arraycopy(regHeader.dest.addr.byNode.node, 0, localIpxAddr.netnode, 0, localIpxAddr.netnode.length);
+                    System.arraycopy(regHeader.dest.addr.byNode.node, 0, localIpxAddr.netnode, 0,
+                        localIpxAddr.netnode.length);
                     localIpxAddr.netnum(regHeader.dest.network);
                     break;
                 }
             }
 
-            Log.log_msg(StringHelper.sprintf("IPX: Connected to server.  IPX address is %d:%d:%d:%d:%d:%d", new Object[]{new Integer(localIpxAddr.netnode[0] & 0xFF), new Integer(localIpxAddr.netnode[1] & 0xFF), new Integer(localIpxAddr.netnode[2] & 0xFF), new Integer(localIpxAddr.netnode[3] & 0xFF), new Integer(localIpxAddr.netnode[4] & 0xFF), new Integer(localIpxAddr.netnode[5] & 0xFF)}));
+            Log.log_msg(StringHelper.sprintf("IPX: Connected to server.  IPX address is %d:%d:%d:%d:%d:%d",
+                new Object[] { Integer.valueOf(localIpxAddr.netnode[0] & 0xFF),
+                    Integer.valueOf(localIpxAddr.netnode[1] & 0xFF), Integer.valueOf(localIpxAddr.netnode[2] & 0xFF),
+                    Integer.valueOf(localIpxAddr.netnode[3] & 0xFF), Integer.valueOf(localIpxAddr.netnode[4] & 0xFF),
+                    Integer.valueOf(localIpxAddr.netnode[5] & 0xFF) }));
 
             incomingPacket.connected = true;
             Timer.TIMER_AddTickHandler(IPX_ClientLoop);
@@ -765,7 +782,7 @@ public class IPX extends Module_base {
         return false;
     }
 
-    static private void IPX_NetworkInit() {
+    private static void IPX_NetworkInit() {
 
         localIpxAddr.netnum[0] = 0x0;
         localIpxAddr.netnum[1] = 0x0;
@@ -779,13 +796,13 @@ public class IPX extends Module_base {
         localIpxAddr.netnode[5] = 0x00;
 
         socketCount = 0;
-        return;
     }
 
     private void close() {
         Section_prop section = (Section_prop) m_configuration;
         Pic.PIC_RemoveEvents(IPX_AES_EventHandler);
-        if (!section.Get_bool("ipx")) return;
+        if (!section.Get_bool("ipx"))
+            return;
 
         if (isIpxServer) {
             isIpxServer = false;
@@ -795,7 +812,7 @@ public class IPX extends Module_base {
 
         Dos_misc.DOS_DelMultiplexHandler(IPX_Multiplex);
         Memory.RealSetVec(0x73, old_73_vector.value);
-        IO.IO_WriteB(0xa1, IO.IO_ReadB(0xa1) | 8);    // disable IRQ11
+        IO.IO_WriteB(0xa1, IO.IO_ReadB(0xa1) | 8); // disable IRQ11
 
         /*PhysPt*/
         int phyDospage = Memory.PhysMake(dospage, 0);
@@ -811,16 +828,17 @@ public class IPX extends Module_base {
         int port;
     }
 
-    static public final class packetBuffer {
+    public static final class packetBuffer {
         /*Bit8u*/ byte[] buffer = new byte[1024];
-        /*Bit16s*/ short packetSize;  // Packet size remaining in read
-        /*Bit16s*/ short packetRead;  // Bytes read of total packet
-        boolean inPacket;      // In packet reception flag
-        boolean connected;        // Connected flag
+        /*Bit16s*/ short packetSize;
+        // Packet size remaining in read
+        /*Bit16s*/ short packetRead; // Bytes read of total packet
+        boolean inPacket; // In packet reception flag
+        boolean connected; // Connected flag
         boolean waitsize;
     }
 
-    static public final class nodeType {
+    public static final class nodeType {
         public /*Uint8*/ byte[] node = new byte[6];
     }
 
@@ -829,7 +847,8 @@ public class IPX extends Module_base {
         final transport src = new transport();
         /*Uint8*/ short checkSum;
         /*Uint8*/ short length = 30;
-        /*Uint8*/ short transControl; // Transport control
+        /*Uint8*/ short transControl;
+        // Transport control
         /*Uint8*/ short pType; // Packet type
 
         byte[] toByteArray() {
@@ -868,49 +887,53 @@ public class IPX extends Module_base {
             }
         }
 
-        static public class transport {
+        public static class transport {
             final addrtype addr = new addrtype();
             /*Uint8*/ int network;
             /*Uint8*/ short socket;
 
-            static public class addrtype {
+            public static class addrtype {
                 //nodeType byNode = new nodeType();
                 nodeType byNode = new nodeType();
 
                 public void setHost(int host) {
                     byNode.node[0] = (byte) (host & 0xFF);
-                    byNode.node[1] = (byte) ((host >> 8) & 0xFF);
-                    byNode.node[2] = (byte) ((host >> 16) & 0xFF);
-                    byNode.node[3] = (byte) ((host >> 24) & 0xFF);
+                    byNode.node[1] = (byte) (host >> 8 & 0xFF);
+                    byNode.node[2] = (byte) (host >> 16 & 0xFF);
+                    byNode.node[3] = (byte) (host >> 24 & 0xFF);
                 }
 
                 public void setPort(int port) {
                     byNode.node[4] = (byte) (port & 0xFF);
-                    byNode.node[5] = (byte) ((port >> 8) & 0xFF);
+                    byNode.node[5] = (byte) (port >> 8 & 0xFF);
                 }
 
                 public int host() {
-                    return (byNode.node[0] & 0xFF) | ((byNode.node[1] & 0xFF) << 8) | ((byNode.node[2] & 0xFF) << 16) | ((byNode.node[3] & 0xFF) << 24);
+                    return byNode.node[0] & 0xFF | (byNode.node[1] & 0xFF) << 8 | (byNode.node[2] & 0xFF) << 16
+                        | (byNode.node[3] & 0xFF) << 24;
                 }
 
                 public String hostAsString() {
-                    return (byNode.node[0] & 0xFF) + "." + (byNode.node[1] & 0xFF) + "." + (byNode.node[2] & 0xFF) + "." + (byNode.node[3] & 0xFF);
+                    return (byNode.node[0] & 0xFF) + "." + (byNode.node[1] & 0xFF) + "." + (byNode.node[2] & 0xFF) + "."
+                        + (byNode.node[3] & 0xFF);
                 }
 
                 public int port() {
-                    return (byNode.node[4] & 0xFF) | ((byNode.node[5] & 0xFF) << 8);
+                    return byNode.node[4] & 0xFF | (byNode.node[5] & 0xFF) << 8;
                 }
             }
         }
     }
 
     final static private class IPaddress {
-        /*Uint32*/ int host;            /* 32-bit IPv4 host address */
-        /*Uint16*/ int port;            /* 16-bit protocol port */
+        /*Uint32*/ int host;
+        /* 32-bit IPv4 host address */
+        /*Uint16*/ int port; /* 16-bit protocol port */
     }
 
     final static private class ipxnetaddr {
-        /*Uint8*/ byte[] netnum = new byte[4];   // Both are big endian
+        /*Uint8*/ byte[] netnum = new byte[4];
+        // Both are big endian
         /*Uint8*/ byte[] netnode = new byte[6];
 
         public byte[] toByteArray() {
@@ -921,14 +944,14 @@ public class IPX extends Module_base {
         }
 
         public int netnum() {
-            return (netnum[3] & 0xFF) | ((netnum[2] & 0xFF) << 8) | ((netnum[1] & 0xFF) << 16) | ((netnum[0] & 0xFF) << 24);
+            return netnum[3] & 0xFF | (netnum[2] & 0xFF) << 8 | (netnum[1] & 0xFF) << 16 | (netnum[0] & 0xFF) << 24;
         }
 
         public void netnum(int num) {
             netnum[3] = (byte) (num & 0xFF);
-            netnum[2] = (byte) ((num >> 8) & 0xFF);
-            netnum[1] = (byte) ((num >> 16) & 0xFF);
-            netnum[0] = (byte) ((num >> 24) & 0xFF);
+            netnum[2] = (byte) (num >> 8 & 0xFF);
+            netnum[1] = (byte) (num >> 16 & 0xFF);
+            netnum[0] = (byte) (num >> 24 & 0xFF);
         }
     }
 
@@ -941,12 +964,12 @@ public class IPX extends Module_base {
     private static class ECBClass {
         public /*RealPt*/ int ECBAddr;
         public boolean isInESRList;
-        public /*Bit8u*/ int iuflag;        // Need to save data since we are not always in
-        public /*Bit16u*/ int mysocket;    // real mode
-        public /*Bit8u*/ byte[] databuffer;    // received data is stored here until we get called
-        public /*Bitu*/ int buflen;        // by Interrupt
+        public /*Bit8u*/ int iuflag; // Need to save data since we are not always in
+        public /*Bit16u*/ int mysocket; // real mode
+        public /*Bit8u*/ byte[] databuffer; // received data is stored here until we get called
+        public /*Bitu*/ int buflen; // by Interrupt
         public /*Bitu*/ int SerialNumber;
-        ECBClass prevECB;    // Linked List
+        ECBClass prevECB; // Linked List
         ECBClass nextECB;
 
         public ECBClass(/*Bit16u*/int segment, /*Bit16u*/int offset) {
@@ -959,12 +982,10 @@ public class IPX extends Module_base {
                 ECBAmount++;
 
                 Log.log_msg(StringHelper.sprintf("ECB: SN%7d created.   Number of ECBs: %3d, ESR %4x:%4x, ECB %4x:%4x",
-                        new Object[]{
-                                new Integer(SerialNumber),
-                                new Integer(ECBAmount),
-                                new Integer(Memory.real_readw(Memory.RealSeg(ECBAddr), Memory.RealOff(ECBAddr) + 6)),
-                                new Integer(Memory.real_readw(Memory.RealSeg(ECBAddr), Memory.RealOff(ECBAddr) + 4)),
-                                new Integer(segment), new Integer(offset)}));
+                    new Object[] { Integer.valueOf(SerialNumber), Integer.valueOf(ECBAmount),
+                        Integer.valueOf(Memory.real_readw(Memory.RealSeg(ECBAddr), Memory.RealOff(ECBAddr) + 6)),
+                        Integer.valueOf(Memory.real_readw(Memory.RealSeg(ECBAddr), Memory.RealOff(ECBAddr) + 4)),
+                        Integer.valueOf(segment), Integer.valueOf(offset) }));
             }
 
             isInESRList = false;
@@ -1027,7 +1048,7 @@ public class IPX extends Module_base {
                     bufoffset++;
                     if (bufoffset >= length) {
                         setCompletionFlag(COMP_SUCCESS);
-                        setImmAddress(buffer, 22);  // Write in source node
+                        setImmAddress(buffer, 22); // Write in source node
                         return true;
                     }
                 }
@@ -1047,7 +1068,7 @@ public class IPX extends Module_base {
 
         public void getFragDesc(/*Bit16u*/int descNum, fragmentDescriptor fragDesc) {
             /*Bit16u*/
-            int memoff = Memory.RealOff(ECBAddr) + 30 + ((descNum + 1) * 6);
+            int memoff = Memory.RealOff(ECBAddr) + 30 + (descNum + 1) * 6;
             fragDesc.offset = Memory.real_readw(Memory.RealSeg(ECBAddr), memoff);
             memoff += 2;
             fragDesc.segment = Memory.real_readw(Memory.RealSeg(ECBAddr), memoff);
@@ -1056,10 +1077,8 @@ public class IPX extends Module_base {
         }
 
         public /*RealPt*/int getESRAddr() {
-            return Memory.RealMake(Memory.real_readw(Memory.RealSeg(ECBAddr),
-                    Memory.RealOff(ECBAddr) + 6),
-                    Memory.real_readw(Memory.RealSeg(ECBAddr),
-                            Memory.RealOff(ECBAddr) + 4));
+            return Memory.RealMake(Memory.real_readw(Memory.RealSeg(ECBAddr), Memory.RealOff(ECBAddr) + 6),
+                Memory.real_readw(Memory.RealSeg(ECBAddr), Memory.RealOff(ECBAddr) + 4));
         }
 
         public void NotifyESR() {
@@ -1068,12 +1087,14 @@ public class IPX extends Module_base {
             if (ESRval != 0 || databuffer != null) { // databuffer: write data at realmode/v86 time
                 // LOG_IPX("ECB: SN%7d to be notified.", SerialNumber);
                 // take the ECB out of the current list
-                if (prevECB == null) {    // was the first in the list
+                if (prevECB == null) { // was the first in the list
                     ECBList = nextECB;
-                    if (ECBList != null) ECBList.prevECB = null;
-                } else {        // not the first
+                    if (ECBList != null)
+                        ECBList.prevECB = null;
+                } else { // not the first
                     prevECB.nextECB = nextECB;
-                    if (nextECB != null) nextECB.prevECB = prevECB;
+                    if (nextECB != null)
+                        nextECB.prevECB = prevECB;
                 }
 
                 nextECB = null;
@@ -1094,7 +1115,8 @@ public class IPX extends Module_base {
                 Pic.PIC_ActivateIRQ(11);
             }
             // this one does not want to be notified, delete it right away
-            else close();
+            else
+                close();
         }
 
         public void setImmAddress(/*Bit8u*/byte[] immAddr, int off) {
@@ -1110,19 +1132,22 @@ public class IPX extends Module_base {
         public void close() {
             if (Config.IPX_DEBUGMSG) {
                 ECBAmount--;
-                Log.log_msg(StringHelper.sprintf("ECB: SN%7d destroyed. Remaining ECBs: %3d", new Object[]{new Integer(SerialNumber), new Integer(ECBAmount)}));
+                Log.log_msg(StringHelper.sprintf("ECB: SN%7d destroyed. Remaining ECBs: %3d",
+                    new Object[] { Integer.valueOf(SerialNumber), Integer.valueOf(ECBAmount) }));
             }
 
             if (isInESRList) {
                 // in ESR list, always the first element is deleted.
                 ESRList = nextECB;
             } else {
-                if (prevECB == null) {    // was the first in the list
+                if (prevECB == null) { // was the first in the list
                     ECBList = nextECB;
-                    if (ECBList != null) ECBList.prevECB = null;
-                } else {    // not the first
+                    if (ECBList != null)
+                        ECBList.prevECB = null;
+                } else { // not the first
                     prevECB.nextECB = nextECB;
-                    if (nextECB != null) nextECB.prevECB = prevECB;
+                    if (nextECB != null)
+                        nextECB.prevECB = prevECB;
                 }
             }
         }
@@ -1158,6 +1183,7 @@ public class IPX extends Module_base {
             return 0;
         }
 
+        @Override
         public void run() {
             exit = false;
             while (!exit) {
@@ -1229,15 +1255,16 @@ public class IPX extends Module_base {
                 WriteOut("PING command.\n\n");
                 WriteOut("The syntax for IPXNET STATUS is:\n\n");
                 WriteOut("IPXNET STATUS\n\n");
-                return;
             }
         }
 
+        @Override
         public void Run() {
             WriteOut("IPX Tunneling utility for DosBox\n\n");
             if (cmd.GetCount() == 0) {
                 WriteOut("The syntax of this command is:\n\n");
-                WriteOut("IPXNET [ CONNECT | DISCONNECT | STARTSERVER | STOPSERVER | PING | HELP |\n         STATUS ]\n\n");
+                WriteOut(
+                    "IPXNET [ CONNECT | DISCONNECT | STARTSERVER | STOPSERVER | PING | HELP |\n         STATUS ]\n\n");
                 return;
             }
 
@@ -1280,7 +1307,8 @@ public class IPX extends Module_base {
                         } else {
                             WriteOut("IPX Tunneling Server failed to start.\n");
                             if (udpPort < 1024)
-                                WriteOut("Try a port number above 1024. See IPXNET HELP CONNECT on how to specify a port.\n");
+                                WriteOut(
+                                    "Try a port number above 1024. See IPXNET HELP CONNECT on how to specify a port.\n");
                         }
                     } else {
                         WriteOut("IPX Tunneling Server already started\n");
@@ -1341,11 +1369,14 @@ public class IPX extends Module_base {
                 if ("status".equals(temp_line)) {
                     WriteOut("IPX Tunneling Status:\n\n");
                     WriteOut("Server status: ");
-                    if (isIpxServer) WriteOut("ACTIVE\n");
-                    else WriteOut("INACTIVE\n");
+                    if (isIpxServer)
+                        WriteOut("ACTIVE\n");
+                    else
+                        WriteOut("INACTIVE\n");
                     WriteOut("Client status: ");
                     if (incomingPacket.connected) {
-                        WriteOut("CONNECTED -- Server at " + ipxServConnIp.getHostAddress() + " port " + udpPort + "\n");
+                        WriteOut(
+                            "CONNECTED -- Server at " + ipxServConnIp.getHostAddress() + " port " + udpPort + "\n");
                     } else {
                         WriteOut("DISCONNECTED\n");
                     }
@@ -1376,15 +1407,15 @@ public class IPX extends Module_base {
                     Timer.TIMER_DelTickHandler(IPX_ClientLoop);
                     WriteOut("Sending broadcast ping:\n\n");
                     pingSend();
-                    ticks = Main.GetTicks();
-                    while ((Main.GetTicks() - ticks) < 1500) {
+                    ticks = MainBase.GetTicks();
+                    while (MainBase.GetTicks() - ticks < 1500) {
                         Callback.CALLBACK_Idle();
                         if (pingCheck(pingHead)) {
-                            WriteOut("Response from " + pingHead.src.addr.hostAsString() + ", port " + pingHead.src.addr.port() + " time=" + (Main.GetTicks() - ticks) + "ms\n");
+                            WriteOut("Response from " + pingHead.src.addr.hostAsString() + ", port "
+                                + pingHead.src.addr.port() + " time=" + (MainBase.GetTicks() - ticks) + "ms\n");
                         }
                     }
                     Timer.TIMER_AddTickHandler(IPX_ClientLoop);
-                    return;
                 }
             }
         }
