@@ -6,213 +6,229 @@ import jdos.misc.Log;
 import jdos.util.StringHelper;
 
 public class VGA_xga {
-    static private final boolean XGA_SHOW_COMMAND_TRACE = false;
+    private static final boolean XGA_SHOW_COMMAND_TRACE = false;
     private static XGAStatus xga;
-    public static IoHandler.IO_WriteHandler XGA_Write = new IoHandler.IO_WriteHandler() {
-        public void call(/*Bitu*/int port, /*Bitu*/int val, /*Bitu*/int len) {
-            //	Log.log_msg("XGA: Write to port %x, val %8x, len %x", port,val, len);
+    public static IoHandler.IO_WriteHandler XGA_Write = (port, val, len) -> {
+        //	Log.log_msg("XGA: Write to port %x, val %8x, len %x", port,val, len);
 
-            switch (port) {
-                case 0x8100:// drawing control: row (low word), column (high word)
-                    // "CUR_X" and "CUR_Y" (see PORT 82E8h,PORT 86E8h)
-                    xga.cury = val & 0x0fff;
-                    if (len == 4) xga.curx = (val >> 16) & 0x0fff;
-                    break;
-                case 0x8102:
-                    xga.curx = val & 0x0fff;
-                    break;
+        switch (port) {
+            case 0x8100:// drawing control: row (low word), column (high word)
+                // "CUR_X" and "CUR_Y" (see PORT 82E8h,PORT 86E8h)
+                xga.cury = val & 0x0fff;
+                if (len == 4)
+                    xga.curx = val >> 16 & 0x0fff;
+                break;
+            case 0x8102:
+                xga.curx = val & 0x0fff;
+                break;
 
-                case 0x8108:// DWORD drawing control: destination Y and axial step
-                    // constant (low word), destination X and axial step
-                    // constant (high word) (see PORT 8AE8h,PORT 8EE8h)
-                    xga.desty = val & 0x3FFF;
-                    if (len == 4) xga.destx = (val >> 16) & 0x3fff;
-                    break;
-                case 0x810a:
-                    xga.destx = val & 0x3fff;
-                    break;
-                case 0x8110: // WORD error term (see PORT 92E8h)
-                    xga.ErrTerm = val & 0x3FFF;
-                    break;
+            case 0x8108:// DWORD drawing control: destination Y and axial step
+                // constant (low word), destination X and axial step
+                // constant (high word) (see PORT 8AE8h,PORT 8EE8h)
+                xga.desty = val & 0x3FFF;
+                if (len == 4)
+                    xga.destx = val >> 16 & 0x3fff;
+                break;
+            case 0x810a:
+                xga.destx = val & 0x3fff;
+                break;
+            case 0x8110: // WORD error term (see PORT 92E8h)
+                xga.ErrTerm = val & 0x3FFF;
+                break;
 
-                case 0x8120: // packed MMIO: DWORD background color (see PORT A2E8h)
-                    xga.backcolor = val;
-                    break;
-                case 0x8124: // packed MMIO: DWORD foreground color (see PORT A6E8h)
-                    xga.forecolor = val;
-                    break;
-                case 0x8128: // DWORD	write mask (see PORT AAE8h)
-                    xga.writemask = val;
-                    break;
-                case 0x812C: // DWORD	read mask (see PORT AEE8h)
-                    xga.readmask = val;
-                    break;
-                case 0x8134: // packed MMIO: DWORD	background mix (low word) and
-                    // foreground mix (high word)	(see PORT B6E8h,PORT BAE8h)
-                    xga.backmix = val & 0xFFFF;
-                    if (len == 4) xga.foremix = (val >> 16);
-                    break;
-                case 0x8136:
-                    xga.foremix = val;
-                    break;
-                case 0x8138:// DWORD top scissors (low word) and left scissors (high
-                    // word) (see PORT BEE8h,#P1047)
-                    xga.scissors.y1 = val & 0x0fff;
-                    if (len == 4) xga.scissors.x1 = (val >> 16) & 0x0fff;
-                    break;
-                case 0x813a:
-                    xga.scissors.x1 = val & 0x0fff;
-                    break;
-                case 0x813C:// DWORD bottom scissors (low word) and right scissors
-                    // (high word) (see PORT BEE8h,#P1047)
-                    xga.scissors.y2 = val & 0x0fff;
-                    if (len == 4) xga.scissors.x2 = (val >> 16) & 0x0fff;
-                    break;
-                case 0x813e:
-                    xga.scissors.x2 = val & 0x0fff;
-                    break;
+            case 0x8120: // packed MMIO: DWORD background color (see PORT A2E8h)
+                xga.backcolor = val;
+                break;
+            case 0x8124: // packed MMIO: DWORD foreground color (see PORT A6E8h)
+                xga.forecolor = val;
+                break;
+            case 0x8128: // DWORD	write mask (see PORT AAE8h)
+                xga.writemask = val;
+                break;
+            case 0x812C: // DWORD	read mask (see PORT AEE8h)
+                xga.readmask = val;
+                break;
+            case 0x8134: // packed MMIO: DWORD	background mix (low word) and
+                // foreground mix (high word)	(see PORT B6E8h,PORT BAE8h)
+                xga.backmix = val & 0xFFFF;
+                if (len == 4)
+                    xga.foremix = val >> 16;
+                break;
+            case 0x8136:
+                xga.foremix = val;
+                break;
+            case 0x8138:// DWORD top scissors (low word) and left scissors (high
+                // word) (see PORT BEE8h,#P1047)
+                xga.scissors.y1 = val & 0x0fff;
+                if (len == 4)
+                    xga.scissors.x1 = val >> 16 & 0x0fff;
+                break;
+            case 0x813a:
+                xga.scissors.x1 = val & 0x0fff;
+                break;
+            case 0x813C:// DWORD bottom scissors (low word) and right scissors
+                // (high word) (see PORT BEE8h,#P1047)
+                xga.scissors.y2 = val & 0x0fff;
+                if (len == 4)
+                    xga.scissors.x2 = val >> 16 & 0x0fff;
+                break;
+            case 0x813e:
+                xga.scissors.x2 = val & 0x0fff;
+                break;
 
-                case 0x8140:// DWORD data manipulation control (low word) and
-                    // miscellaneous 2 (high word) (see PORT BEE8h,#P1047)
-                    xga.pix_cntl = val & 0xFFFF;
-                    if (len == 4) xga.control2 = (val >> 16) & 0x0fff;
-                    break;
-                case 0x8144:// DWORD miscellaneous (low word) and read register select
-                    // (high word)(see PORT BEE8h,#P1047)
-                    xga.control1 = val & 0xffff;
-                    if (len == 4) xga.read_sel = (val >> 16) & 0x7;
-                    break;
-                case 0x8148:// DWORD minor axis pixel count (low word) and major axis
-                    // pixel count (high word) (see PORT BEE8h,#P1047,PORT 96E8h)
-                    xga.MIPcount = val & 0x0fff;
-                    if (len == 4) xga.MAPcount = (val >> 16) & 0x0fff;
-                    break;
-                case 0x814a:
-                    xga.MAPcount = val & 0x0fff;
-                    break;
-                case 0x92e8:
-                    xga.ErrTerm = val & 0x3FFF;
-                    break;
-                case 0x96e8:
-                    xga.MAPcount = val & 0x0fff;
-                    break;
-                case 0x9ae8:
-                case 0x8118: // Trio64V+ packed MMIO
-                    XGA_DrawCmd(val, len);
-                    break;
-                case 0xa2e8:
-                    xga.backcolor = (int) XGA_SetDualReg(xga.backcolor, val);
-                    break;
-                case 0xa6e8:
-                    xga.forecolor = (int) XGA_SetDualReg(xga.forecolor, val);
-                    break;
-                case 0xaae8:
-                    xga.writemask = (int) XGA_SetDualReg(xga.writemask, val);
-                    break;
-                case 0xaee8:
-                    xga.readmask = (int) XGA_SetDualReg(xga.readmask, val);
-                    break;
-                case 0x82e8:
-                    xga.cury = val & 0x0fff;
-                    break;
-                case 0x86e8:
-                    xga.curx = val & 0x0fff;
-                    break;
-                case 0x8ae8:
-                    xga.desty = val & 0x3fff;
-                    break;
-                case 0x8ee8:
-                    xga.destx = val & 0x3fff;
-                    break;
-                case 0xb2e8:
-                    Log.log_msg("COLOR_CMP not implemented");
-                    break;
-                case 0xb6e8:
-                    xga.backmix = val;
-                    break;
-                case 0xbae8:
-                    xga.foremix = val;
-                    break;
-                case 0xbee8:
-                    XGA_Write_Multifunc(val, len);
-                    break;
-                case 0xe2e8:
+            case 0x8140:// DWORD data manipulation control (low word) and
+                // miscellaneous 2 (high word) (see PORT BEE8h,#P1047)
+                xga.pix_cntl = val & 0xFFFF;
+                if (len == 4)
+                    xga.control2 = val >> 16 & 0x0fff;
+                break;
+            case 0x8144:// DWORD miscellaneous (low word) and read register select
+                // (high word)(see PORT BEE8h,#P1047)
+                xga.control1 = val & 0xffff;
+                if (len == 4)
+                    xga.read_sel = val >> 16 & 0x7;
+                break;
+            case 0x8148:// DWORD minor axis pixel count (low word) and major axis
+                // pixel count (high word) (see PORT BEE8h,#P1047,PORT 96E8h)
+                xga.MIPcount = val & 0x0fff;
+                if (len == 4)
+                    xga.MAPcount = val >> 16 & 0x0fff;
+                break;
+            case 0x814a:
+                xga.MAPcount = val & 0x0fff;
+                break;
+            case 0x92e8:
+                xga.ErrTerm = val & 0x3FFF;
+                break;
+            case 0x96e8:
+                xga.MAPcount = val & 0x0fff;
+                break;
+            case 0x9ae8:
+            case 0x8118: // Trio64V+ packed MMIO
+                XGA_DrawCmd(val, len);
+                break;
+            case 0xa2e8:
+                xga.backcolor = (int) XGA_SetDualReg(xga.backcolor, val);
+                break;
+            case 0xa6e8:
+                xga.forecolor = (int) XGA_SetDualReg(xga.forecolor, val);
+                break;
+            case 0xaae8:
+                xga.writemask = (int) XGA_SetDualReg(xga.writemask, val);
+                break;
+            case 0xaee8:
+                xga.readmask = (int) XGA_SetDualReg(xga.readmask, val);
+                break;
+            case 0x82e8:
+                xga.cury = val & 0x0fff;
+                break;
+            case 0x86e8:
+                xga.curx = val & 0x0fff;
+                break;
+            case 0x8ae8:
+                xga.desty = val & 0x3fff;
+                break;
+            case 0x8ee8:
+                xga.destx = val & 0x3fff;
+                break;
+            case 0xb2e8:
+                Log.log_msg("COLOR_CMP not implemented");
+                break;
+            case 0xb6e8:
+                xga.backmix = val;
+                break;
+            case 0xbae8:
+                xga.foremix = val;
+                break;
+            case 0xbee8:
+                XGA_Write_Multifunc(val, len);
+                break;
+            case 0xe2e8:
+                xga.waitcmd.newline = false;
+                XGA_DrawWait(val, len);
+                break;
+            case 0x83d4:
+                if (len == 1)
+                    VGA_crtc.vga_write_p3d4.call(0, val, 1);
+                else if (len == 2) {
+                    VGA_crtc.vga_write_p3d4.call(0, val & 0xff, 1);
+                    VGA_crtc.vga_write_p3d5.call(0, val >> 8, 1);
+                } else
+                    Log.exit("unimplemented XGA MMIO");
+                break;
+            case 0x83d5:
+                if (len == 1)
+                    VGA_crtc.vga_write_p3d5.call(0, val, 1);
+                else
+                    Log.exit("unimplemented XGA MMIO");
+                break;
+            default:
+                if (port <= 0x4000) {
+                    //Log.log_msg("XGA: Wrote to port %4x with %08x, len %x", port, val, len);
                     xga.waitcmd.newline = false;
                     XGA_DrawWait(val, len);
-                    break;
-                case 0x83d4:
-                    if (len == 1) VGA_crtc.vga_write_p3d4.call(0, val, 1);
-                    else if (len == 2) {
-                        VGA_crtc.vga_write_p3d4.call(0, val & 0xff, 1);
-                        VGA_crtc.vga_write_p3d5.call(0, val >> 8, 1);
-                    } else Log.exit("unimplemented XGA MMIO");
-                    break;
-                case 0x83d5:
-                    if (len == 1) VGA_crtc.vga_write_p3d5.call(0, val, 1);
-                    else Log.exit("unimplemented XGA MMIO");
-                    break;
-                default:
-                    if (port <= 0x4000) {
-                        //Log.log_msg("XGA: Wrote to port %4x with %08x, len %x", port, val, len);
-                        xga.waitcmd.newline = false;
-                        XGA_DrawWait(val, len);
 
-                    } else
-                        Log.log_msg("XGA: Wrote to port " + Integer.toString(port, 16) + " with " + Integer.toString(val, 16) + ", len " + len);
-                    break;
-            }
+                } else
+                    Log.log_msg("XGA: Wrote to port " + Integer.toString(port, 16) + " with "
+                        + Integer.toString(val, 16) + ", len " + len);
+                break;
         }
     };
-    public static IoHandler.IO_ReadHandler XGA_Read = new IoHandler.IO_ReadHandler() {
-        public /*Bitu*/int call(/*Bitu*/int port, /*Bitu*/int len) {
-            switch (port) {
-                case 0x8118:
-                case 0x9ae8:
-                    return 0x400; // nothing busy
-                case 0x81ec: // S3 video data processor
-                    return 0x00007000;
-                case 0x83da: {
-                    /*Bits*/
-                    int delaycyc = CPU.CPU_CycleMax / 5000;
-                    if ((CPU.CPU_Cycles < 3 * delaycyc)) delaycyc = 0;
-                    CPU.CPU_Cycles -= delaycyc;
-                    CPU.CPU_IODelayRemoved += delaycyc;
-                    return VGA_misc.vga_read_p3da.call(0, 0);
-                }
-                case 0x83d4:
-                    if (len == 1) return VGA_crtc.vga_read_p3d4.call(0, 0);
-                    else Log.exit("unimplemented XGA MMIO");
-                    break;
-                case 0x83d5:
-                    if (len == 1) return VGA_crtc.vga_read_p3d5.call(0, 0);
-                    else Log.exit("unimplemented XGA MMIO");
-                    break;
-                case 0x9ae9:
-                    if (xga.waitcmd.wait) return 0x4;
-                    else return 0x0;
-                case 0xbee8:
-                    return XGA_Read_Multifunc();
-                case 0xa2e8:
-                    return XGA_GetDualReg(xga.backcolor);
-                case 0xa6e8:
-                    return XGA_GetDualReg(xga.forecolor);
-                case 0xaae8:
-                    return XGA_GetDualReg(xga.writemask);
-                case 0xaee8:
-                    return XGA_GetDualReg(xga.readmask);
-                default:
-                    //Log.log_msg("XGA: Read from port %x, len %x", port, len);
-                    break;
+    public static IoHandler.IO_ReadHandler XGA_Read = (port, len) -> {
+        switch (port) {
+            case 0x8118:
+            case 0x9ae8:
+                return 0x400; // nothing busy
+            case 0x81ec: // S3 video data processor
+                return 0x00007000;
+            case 0x83da: {
+                /*Bits*/
+                int delaycyc = CPU.CPU_CycleMax / 5000;
+                if (CPU.CPU_Cycles < 3 * delaycyc)
+                    delaycyc = 0;
+                CPU.CPU_Cycles -= delaycyc;
+                CPU.CPU_IODelayRemoved += delaycyc;
+                return VGA_misc.vga_read_p3da.call(0, 0);
             }
-            return 0xffffffff;
+            case 0x83d4:
+                if (len == 1)
+                    return VGA_crtc.vga_read_p3d4.call(0, 0);
+                else
+                    Log.exit("unimplemented XGA MMIO");
+                break;
+            case 0x83d5:
+                if (len == 1)
+                    return VGA_crtc.vga_read_p3d5.call(0, 0);
+                else
+                    Log.exit("unimplemented XGA MMIO");
+                break;
+            case 0x9ae9:
+                if (xga.waitcmd.wait)
+                    return 0x4;
+                else
+                    return 0x0;
+            case 0xbee8:
+                return XGA_Read_Multifunc();
+            case 0xa2e8:
+                return XGA_GetDualReg(xga.backcolor);
+            case 0xa6e8:
+                return XGA_GetDualReg(xga.forecolor);
+            case 0xaae8:
+                return XGA_GetDualReg(xga.writemask);
+            case 0xaee8:
+                return XGA_GetDualReg(xga.readmask);
+            default:
+                //Log.log_msg("XGA: Read from port %x, len %x", port, len);
+                break;
         }
+        return 0xffffffff;
     };
 
-    static private int XGA_SCREEN_WIDTH() {
+    private static int XGA_SCREEN_WIDTH() {
         return VGA.vga.s3.xga_screen_width;
     }
 
-    static private int XGA_COLOR_MODE() {
+    private static int XGA_COLOR_MODE() {
         return VGA.vga.s3.xga_color_mode;
     }
 
@@ -284,35 +300,38 @@ public class VGA_xga {
         }
     }
 
-    static private void XGA_DrawPoint(/*Bitu*/int x, /*Bitu*/int y, /*Bitu*/int c) {
-        if ((xga.curcommand & 0x1) == 0) return;
-        if ((xga.curcommand & 0x10) == 0) return;
-
-        if (x < xga.scissors.x1) return;
-        if (x > xga.scissors.x2) return;
-        if (y < xga.scissors.y1) return;
-        if (y > xga.scissors.y2) return;
+    private static void XGA_DrawPoint(/*Bitu*/int x, /*Bitu*/int y, /*Bitu*/int c) {
+        if (((xga.curcommand & 0x1) == 0) || ((xga.curcommand & 0x10) == 0) || (x < xga.scissors.x1) || (x > xga.scissors.x2))
+            return;
+        if (y < xga.scissors.y1)
+            return;
+        if (y > xga.scissors.y2)
+            return;
 
         /*Bit32u*/
-        int memaddr = (y * XGA_SCREEN_WIDTH()) + x;
+        int memaddr = y * XGA_SCREEN_WIDTH() + x;
         /* Need to zero out all unused bits in modes that have any (15-bit or "32"-bit -- the last
            one is actually 24-bit. Without this step there may be some graphics corruption (mainly,
            during windows dragging. */
         switch (XGA_COLOR_MODE()) {
             case VGA.M_LIN8:
-                if ((memaddr >= VGA.vga.vmemsize)) break;
+                if (memaddr >= VGA.vga.vmemsize)
+                    break;
                 RAM.writeb(VGA.vga.mem.linear + memaddr, (short) c);
                 break;
             case VGA.M_LIN15:
-                if ((memaddr * 2 >= VGA.vga.vmemsize)) break;
+                if (memaddr * 2 >= VGA.vga.vmemsize)
+                    break;
                 RAM.writew(VGA.vga.mem.linear + memaddr * 2, c & 0x7fff);
                 break;
             case VGA.M_LIN16:
-                if ((memaddr * 2 >= VGA.vga.vmemsize)) break;
+                if (memaddr * 2 >= VGA.vga.vmemsize)
+                    break;
                 RAM.writew(VGA.vga.mem.linear + memaddr * 2, c & 0xffff);
                 break;
             case VGA.M_LIN32:
-                if ((memaddr * 4 >= VGA.vga.vmemsize)) break;
+                if (memaddr * 4 >= VGA.vga.vmemsize)
+                    break;
                 RAM.writed(VGA.vga.mem.linear + memaddr * 4, c);
                 break;
             default:
@@ -323,18 +342,21 @@ public class VGA_xga {
 
     private static /*Bitu*/int XGA_GetPoint(/*Bitu*/int x, /*Bitu*/int y) {
         /*Bit32u*/
-        int memaddr = (y * XGA_SCREEN_WIDTH()) + x;
+        int memaddr = y * XGA_SCREEN_WIDTH() + x;
 
         switch (XGA_COLOR_MODE()) {
             case VGA.M_LIN8:
-                if ((memaddr >= VGA.vga.vmemsize)) break;
+                if (memaddr >= VGA.vga.vmemsize)
+                    break;
                 return RAM.readb(VGA.vga.mem.linear + memaddr);
             case VGA.M_LIN15:
             case VGA.M_LIN16:
-                if ((memaddr * 2 >= VGA.vga.vmemsize)) break;
+                if (memaddr * 2 >= VGA.vga.vmemsize)
+                    break;
                 return RAM.readw(VGA.vga.mem.linear + memaddr * 2);
             case VGA.M_LIN32:
-                if ((memaddr * 4 >= VGA.vga.vmemsize)) break;
+                if (memaddr * 4 >= VGA.vga.vmemsize)
+                    break;
                 return RAM.readd(VGA.vga.mem.linear + memaddr * 4);
             default:
                 break;
@@ -342,7 +364,7 @@ public class VGA_xga {
         return 0;
     }
 
-    static private /*Bitu*/int XGA_GetMixResult(/*Bitu*/int mixmode, /*Bitu*/int srcval, /*Bitu*/int dstdata) {
+    private static /*Bitu*/int XGA_GetMixResult(/*Bitu*/int mixmode, /*Bitu*/int srcval, /*Bitu*/int dstdata) {
         /*Bitu*/
         int destval = 0;
         switch (mixmode & 0xf) {
@@ -374,10 +396,10 @@ public class VGA_xga {
                 destval = ~(srcval & dstdata);
                 break;
             case 0x09: /* (not SRC) or DST */
-                destval = (~srcval) | dstdata;
+                destval = ~srcval | dstdata;
                 break;
             case 0x0a: /* SRC or (not DST) */
-                destval = srcval | (~dstdata);
+                destval = srcval | ~dstdata;
                 break;
             case 0x0b: /* SRC or DST */
                 destval = srcval | dstdata;
@@ -386,10 +408,10 @@ public class VGA_xga {
                 destval = srcval & dstdata;
                 break;
             case 0x0d: /* SRC and (not DST) */
-                destval = srcval & (~dstdata);
+                destval = srcval & ~dstdata;
                 break;
             case 0x0e: /* (not SRC) and DST */
-                destval = (~srcval) & dstdata;
+                destval = ~srcval & dstdata;
                 break;
             case 0x0f: /* not (SRC or DST) */
                 destval = ~(srcval | dstdata);
@@ -401,7 +423,7 @@ public class VGA_xga {
         return destval;
     }
 
-    static private void XGA_DrawLineVector(/*Bitu*/int val) {
+    private static void XGA_DrawLineVector(/*Bitu*/int val) {
         /*Bits*/
         int xat, yat;
         /*Bitu*/
@@ -420,7 +442,7 @@ public class VGA_xga {
         xat = xga.curx;
         yat = xga.cury;
 
-        switch ((val >> 5) & 0x7) {
+        switch (val >> 5 & 0x7) {
             case 0x00: /* 0 degrees */
                 sx = 1;
                 sy = 0;
@@ -453,7 +475,7 @@ public class VGA_xga {
                 sx = 1;
                 sy = 1;
                 break;
-            default:  // Should never get here
+            default: // Should never get here
                 sx = 0;
                 sy = 0;
                 break;
@@ -461,11 +483,11 @@ public class VGA_xga {
 
         for (i = 0; i <= dx; i++) {
             /*Bitu*/
-            int mixmode = (xga.pix_cntl >> 6) & 0x3;
+            int mixmode = xga.pix_cntl >> 6 & 0x3;
             switch (mixmode) {
                 case 0x00: /* FOREMIX always used */
                     mixmode = xga.foremix;
-                    switch ((mixmode >> 5) & 0x03) {
+                    switch (mixmode >> 5 & 0x03) {
                         case 0x00: /* Src is background color */
                             srcval = xga.backcolor;
                             break;
@@ -502,7 +524,7 @@ public class VGA_xga {
         xga.cury = yat;
     }
 
-    static private void XGA_DrawLineBresenham(/*Bitu*/int val) {
+    private static void XGA_DrawLineBresenham(/*Bitu*/int val) {
         /*Bits*/
         int xat, yat;
         /*Bitu*/
@@ -522,35 +544,37 @@ public class VGA_xga {
 
         /*Bits*/
         dminor = (/*Bit16s*/short) xga.desty;
-        if ((xga.desty & 0x2000) != 0) dminor |= 0xffffe000;
+        if ((xga.desty & 0x2000) != 0)
+            dminor |= 0xffffe000;
         dminor >>= 1;
 
         /*Bits*/
         destxtmp = (/*Bit16s*/short) xga.destx;
-        if ((xga.destx & 0x2000) != 0) destxtmp |= 0xffffe000;
-
+        if ((xga.destx & 0x2000) != 0)
+            destxtmp |= 0xffffe000;
 
         dmajor = -(destxtmp - (dminor << 1)) >> 1;
 
         dx = dmajor;
-        if (((val >> 5) & 0x1) != 0) {
+        if ((val >> 5 & 0x1) != 0) {
             sx = 1;
         } else {
             sx = -1;
         }
         dy = dminor;
-        if (((val >> 7) & 0x1) != 0) {
+        if ((val >> 7 & 0x1) != 0) {
             sy = 1;
         } else {
             sy = -1;
         }
         /*Bits*/
         e = (/*Bit16s*/short) xga.ErrTerm;
-        if ((xga.ErrTerm & 0x2000) != 0) e |= 0xffffe000;
+        if ((xga.ErrTerm & 0x2000) != 0)
+            e |= 0xffffe000;
         xat = xga.curx;
         yat = xga.cury;
 
-        if (((val >> 6) & 0x1) != 0) {
+        if ((val >> 6 & 0x1) != 0) {
             steep = false;
             int t;
             t = xat;
@@ -568,11 +592,11 @@ public class VGA_xga {
 
         for (i = 0; i <= xga.MAPcount; i++) {
             /*Bitu*/
-            int mixmode = (xga.pix_cntl >> 6) & 0x3;
+            int mixmode = xga.pix_cntl >> 6 & 0x3;
             switch (mixmode) {
                 case 0x00: /* FOREMIX always used */
                     mixmode = xga.foremix;
-                    switch ((mixmode >> 5) & 0x03) {
+                    switch (mixmode >> 5 & 0x03) {
                         case 0x00: /* Src is background color */
                             srcval = xga.backcolor;
                             break;
@@ -613,10 +637,10 @@ public class VGA_xga {
             }
             while (e > 0) {
                 yat += sy;
-                e -= (dx << 1);
+                e -= dx << 1;
             }
             xat += sx;
-            e += (dy << 1);
+            e += dy << 1;
         }
 
         if (steep) {
@@ -647,8 +671,10 @@ public class VGA_xga {
         dx = -1;
         dy = -1;
 
-        if (((val >> 5) & 0x01) != 0) dx = 1;
-        if (((val >> 7) & 0x01) != 0) dy = 1;
+        if ((val >> 5 & 0x01) != 0)
+            dx = 1;
+        if ((val >> 7 & 0x01) != 0)
+            dy = 1;
 
         srcy = xga.cury;
 
@@ -656,11 +682,11 @@ public class VGA_xga {
             srcx = xga.curx;
             for (xat = 0; xat <= xga.MAPcount; xat++) {
                 /*Bitu*/
-                int mixmode = (xga.pix_cntl >> 6) & 0x3;
+                int mixmode = xga.pix_cntl >> 6 & 0x3;
                 switch (mixmode) {
                     case 0x00: /* FOREMIX always used */
                         mixmode = xga.foremix;
-                        switch ((mixmode >> 5) & 0x03) {
+                        switch (mixmode >> 5 & 0x03) {
                             case 0x00: /* Src is background color */
                                 srcval = xga.backcolor;
                                 break;
@@ -703,13 +729,13 @@ public class VGA_xga {
         boolean newline = false;
         if (!xga.waitcmd.newline) {
 
-            if ((xga.waitcmd.curx < 2048) && xga.waitcmd.curx > (xga.waitcmd.x2)) {
+            if (xga.waitcmd.curx < 2048 && xga.waitcmd.curx > xga.waitcmd.x2) {
                 xga.waitcmd.curx = xga.waitcmd.x1;
                 xga.waitcmd.cury++;
                 xga.waitcmd.cury &= 0x0fff;
                 newline = true;
                 xga.waitcmd.newline = true;
-                if ((xga.waitcmd.cury < 2048) && (xga.waitcmd.cury > xga.waitcmd.y2))
+                if (xga.waitcmd.cury < 2048 && xga.waitcmd.cury > xga.waitcmd.y2)
                     xga.waitcmd.wait = false;
             } else if (xga.waitcmd.curx >= 2048) {
                 /*Bit16u*/
@@ -723,7 +749,7 @@ public class VGA_xga {
                         xga.waitcmd.cury &= 0x0fff;
                         newline = true;
                         xga.waitcmd.newline = true;
-                        if ((xga.waitcmd.cury < 2048) && (xga.waitcmd.cury > xga.waitcmd.y2))
+                        if (xga.waitcmd.cury < 2048 && xga.waitcmd.cury > xga.waitcmd.y2)
                             xga.waitcmd.wait = false;
                     }
                 } else { // else overlapping
@@ -733,7 +759,7 @@ public class VGA_xga {
                         xga.waitcmd.cury &= 0x0fff;
                         newline = true;
                         xga.waitcmd.newline = true;
-                        if ((xga.waitcmd.cury < 2048) && (xga.waitcmd.cury > xga.waitcmd.y2))
+                        if (xga.waitcmd.cury < 2048 && xga.waitcmd.cury > xga.waitcmd.y2)
                             xga.waitcmd.wait = false;
                     }
                 }
@@ -760,9 +786,10 @@ public class VGA_xga {
     }
 
     private static void XGA_DrawWait(/*Bitu*/int val, /*Bitu*/int len) {
-        if (!xga.waitcmd.wait) return;
+        if (!xga.waitcmd.wait)
+            return;
         /*Bitu*/
-        int mixmode = (xga.pix_cntl >> 6) & 0x3;
+        int mixmode = xga.pix_cntl >> 6 & 0x3;
         /*Bitu*/
         int srcval;
         switch (xga.waitcmd.cmd) {
@@ -771,7 +798,7 @@ public class VGA_xga {
                     case 0x00: /* FOREMIX always used */
                         mixmode = xga.foremix;
 
-    /*					switch((mixmode >> 5) & 0x03) {
+                        /*					switch((mixmode >> 5) & 0x03) {
                             case 0x00: // Src is background color
                                 srcval = xga.backcolor;
                                 break;
@@ -779,27 +806,28 @@ public class VGA_xga {
                                 srcval = xga.forecolor;
                                 break;
                             case 0x02: // Src is pixel data from PIX_TRANS register
-    */
-                        if (((mixmode >> 5) & 0x03) != 0x2) {
+                        */
+                        if ((mixmode >> 5 & 0x03) != 0x2) {
                             // those cases don't seem to occur
                             Log.log_msg("XGA: unsupported drawwait operation");
                             break;
                         }
                         switch (xga.waitcmd.buswidth) {
-                            case VGA.M_LIN8:        //  8 bit
+                            case VGA.M_LIN8: //  8 bit
                                 XGA_DrawWaitSub(mixmode, val);
                                 break;
                             case 0x20 | VGA.M_LIN8: // 16 bit
                                 for (/*Bitu*/int i = 0; i < len; i++) {
-                                    XGA_DrawWaitSub(mixmode, (val >> (8 * i)) & 0xff);
-                                    if (xga.waitcmd.newline) break;
+                                    XGA_DrawWaitSub(mixmode, val >> 8 * i & 0xff);
+                                    if (xga.waitcmd.newline)
+                                        break;
                                 }
                                 break;
                             case 0x40 | VGA.M_LIN8: // 32 bit
                                 for (int i = 0; i < 4; i++)
-                                    XGA_DrawWaitSub(mixmode, (val >> (8 * i)) & 0xff);
+                                    XGA_DrawWaitSub(mixmode, val >> 8 * i & 0xff);
                                 break;
-                            case (0x20 | VGA.M_LIN32):
+                            case 0x20 | VGA.M_LIN32:
                                 if (len != 4) { // Win 3.11 864 'hack?'
                                     if (xga.waitcmd.datasize == 0) {
                                         // set it up to wait for the next word
@@ -807,7 +835,7 @@ public class VGA_xga {
                                         xga.waitcmd.datasize = 2;
                                         return;
                                     } else {
-                                        srcval = (int) ((val << 16) | xga.waitcmd.data);
+                                        srcval = (int) (val << 16 | xga.waitcmd.data);
                                         xga.waitcmd.data = 0;
                                         xga.waitcmd.datasize = 0;
                                         XGA_DrawWaitSub(mixmode, srcval);
@@ -829,8 +857,8 @@ public class VGA_xga {
                                 break;
                             default:
                                 // Let's hope they never show up ;)
-                                Log.log_msg("XGA: unsupported bpp / datawidth combination " +
-                                        Integer.toString(xga.waitcmd.buswidth, 16));
+                                Log.log_msg("XGA: unsupported bpp / datawidth combination "
+                                    + Integer.toString(xga.waitcmd.buswidth, 16));
                                 break;
                         }
                         break;
@@ -847,13 +875,17 @@ public class VGA_xga {
                                 break;
                             case 0x20: // 16 bit
                                 chunksize = 16;
-                                if (len == 4) chunks = 2;
-                                else chunks = 1;
+                                if (len == 4)
+                                    chunks = 2;
+                                else
+                                    chunks = 1;
                                 break;
                             case 0x40: // 32 bit
                                 chunksize = 16;
-                                if (len == 4) chunks = 2;
-                                else chunks = 1;
+                                if (len == 4)
+                                    chunks = 2;
+                                else
+                                    chunks = 1;
                                 break;
                             case 0x60: // undocumented guess (but works)
                                 chunksize = 8;
@@ -869,11 +901,13 @@ public class VGA_xga {
 
                                 // This formula can rule the world ;)
                                 /*Bitu*/
-                                int mask = 1 << ((((n & 0xF8) + (8 - (n & 0x7))) - 1) + chunksize * k);
-                                if ((val & mask) != 0) mixmode1 = xga.foremix;
-                                else mixmode1 = xga.backmix;
+                                int mask = 1 << (n & 0xF8) + 8 - (n & 0x7) - 1 + chunksize * k;
+                                if ((val & mask) != 0)
+                                    mixmode1 = xga.foremix;
+                                else
+                                    mixmode1 = xga.backmix;
 
-                                switch ((mixmode1 >> 5) & 0x03) {
+                                switch (mixmode1 >> 5 & 0x03) {
                                     case 0x00: // Src is background color
                                         srcval = xga.backcolor;
                                         break;
@@ -881,21 +915,21 @@ public class VGA_xga {
                                         srcval = xga.forecolor;
                                         break;
                                     default:
-                                        Log.log_msg("XGA: DrawBlitWait: Unsupported src " +
-                                                Integer.toString((mixmode1 >> 5) & 0x03, 16));
+                                        Log.log_msg("XGA: DrawBlitWait: Unsupported src "
+                                            + Integer.toString(mixmode1 >> 5 & 0x03, 16));
                                         srcval = 0;
                                         break;
                                 }
                                 XGA_DrawWaitSub(mixmode1, srcval);
 
-                                if ((xga.waitcmd.cury < 2048) &&
-                                        (xga.waitcmd.cury >= xga.waitcmd.y2)) {
+                                if (xga.waitcmd.cury < 2048 && xga.waitcmd.cury >= xga.waitcmd.y2) {
                                     xga.waitcmd.wait = false;
                                     k = 1000; // no more chunks
                                     break;
                                 }
                                 // next chunk goes to next line
-                                if (xga.waitcmd.newline) break;
+                                if (xga.waitcmd.newline)
+                                    break;
                             } // pixels loop
                         } // chunks loop
                         break;
@@ -930,8 +964,10 @@ public class VGA_xga {
         dx = -1;
         dy = -1;
 
-        if (((val >> 5) & 0x01) != 0) dx = 1;
-        if (((val >> 7) & 0x01) != 0) dy = 1;
+        if ((val >> 5 & 0x01) != 0)
+            dx = 1;
+        if ((val >> 7 & 0x01) != 0)
+            dy = 1;
 
         srcx = xga.curx;
         srcy = xga.cury;
@@ -939,7 +975,7 @@ public class VGA_xga {
         tary = xga.desty;
 
         /*Bitu*/
-        int mixselect = (xga.pix_cntl >> 6) & 0x3;
+        int mixselect = xga.pix_cntl >> 6 & 0x3;
         /*Bitu*/
         int mixmode = 0x67; /* Source is bitmap data, mix mode is src */
         switch (mixselect) {
@@ -956,7 +992,6 @@ public class VGA_xga {
                 Log.log_msg("XGA: BlitRect: Unknown mix select register");
                 break;
         }
-
 
         /* Copy source to video ram */
         for (yat = 0; yat <= xga.MIPcount; yat++) {
@@ -980,7 +1015,7 @@ public class VGA_xga {
                     }
                 }
 
-                switch ((mixmode >> 5) & 0x03) {
+                switch (mixmode >> 5 & 0x03) {
                     case 0x00: /* Src is background color */
                         srcval = xga.backcolor;
                         break;
@@ -1012,7 +1047,7 @@ public class VGA_xga {
         }
     }
 
-    static private void XGA_DrawPattern(/*Bitu*/int val) {
+    private static void XGA_DrawPattern(/*Bitu*/int val) {
         /*Bitu*/
         int srcdata;
         /*Bitu*/
@@ -1029,8 +1064,10 @@ public class VGA_xga {
         dx = -1;
         dy = -1;
 
-        if (((val >> 5) & 0x01) != 0) dx = 1;
-        if (((val >> 7) & 0x01) != 0) dy = 1;
+        if ((val >> 5 & 0x01) != 0)
+            dx = 1;
+        if ((val >> 7 & 0x01) != 0)
+            dy = 1;
 
         srcx = xga.curx;
         srcy = xga.cury;
@@ -1038,7 +1075,7 @@ public class VGA_xga {
         tary = xga.desty;
 
         /*Bitu*/
-        int mixselect = (xga.pix_cntl >> 6) & 0x3;
+        int mixselect = xga.pix_cntl >> 6 & 0x3;
         /*Bitu*/
         int mixmode = 0x67; /* Source is bitmap data, mix mode is src */
         switch (mixselect) {
@@ -1064,7 +1101,6 @@ public class VGA_xga {
                 //Log.log_msg("patternpoint (%3d/%3d)v%x",srcx + (tarx & 0x7), srcy + (tary & 0x7),srcdata);
                 dstdata = XGA_GetPoint(tarx, tary);
 
-
                 if (mixselect == 0x3) {
                     // TODO lots of guessing here but best results this way
                     /*if(srcdata == xga.forecolor)*/
@@ -1074,7 +1110,7 @@ public class VGA_xga {
                         mixmode = xga.backmix;
                 }
 
-                switch ((mixmode >> 5) & 0x03) {
+                switch (mixmode >> 5 & 0x03) {
                     case 0x00: /* Src is background color */
                         srcval = xga.backcolor;
                         break;
@@ -1103,7 +1139,7 @@ public class VGA_xga {
         }
     }
 
-    static private void XGA_DrawCmd(/*Bitu*/int val, /*Bitu*/int len) {
+    private static void XGA_DrawCmd(/*Bitu*/int val, /*Bitu*/int len) {
         /*Bit16u*/
         int cmd;
         cmd = val >> 13;
@@ -1131,7 +1167,9 @@ public class VGA_xga {
                 if ((val & 0x100) == 0) {
                     xga.waitcmd.wait = false;
                     if (XGA_SHOW_COMMAND_TRACE)
-                        Log.log_msg(StringHelper.sprintf("XGA: Draw immediate rect: xy(%3d/%3d), len(%3d/%3d)", new Object[]{new Integer(xga.curx), new Integer(xga.cury), new Integer(xga.MAPcount), new Integer(xga.MIPcount)}));
+                        Log.log_msg(StringHelper.sprintf("XGA: Draw immediate rect: xy(%3d/%3d), len(%3d/%3d)",
+                            new Object[] { Integer.valueOf(xga.curx), Integer.valueOf(xga.cury),
+                                Integer.valueOf(xga.MAPcount), Integer.valueOf(xga.MIPcount) }));
                     XGA_DrawRectangle(val);
 
                 } else {
@@ -1143,21 +1181,24 @@ public class VGA_xga {
                     xga.waitcmd.x1 = xga.curx;
                     xga.waitcmd.y1 = xga.cury;
                     /*Bit16u*/
-                    xga.waitcmd.x2 = (xga.curx + xga.MAPcount) & 0x0fff;
+                    xga.waitcmd.x2 = xga.curx + xga.MAPcount & 0x0fff;
                     /*Bit16u*/
-                    xga.waitcmd.y2 = (xga.cury + xga.MIPcount + 1) & 0x0fff;
+                    xga.waitcmd.y2 = xga.cury + xga.MIPcount + 1 & 0x0fff;
                     xga.waitcmd.sizex = xga.MAPcount;
                     xga.waitcmd.sizey = xga.MIPcount + 1;
                     xga.waitcmd.cmd = 2;
-                    xga.waitcmd.buswidth = VGA.vga.mode | ((val & 0x600) >> 4);
+                    xga.waitcmd.buswidth = VGA.vga.mode | (val & 0x600) >> 4;
                     xga.waitcmd.data = 0;
                     xga.waitcmd.datasize = 0;
 
                     if (XGA_SHOW_COMMAND_TRACE)
-                        Log.log_msg(StringHelper.sprintf("XGA: Draw wait rect, w/h(%3d/%3d), x/y1(%3d/%3d), x/y2(%3d/%3d), %4x",
-                                new Object[]{new Integer(xga.MAPcount + 1), new Integer(xga.MIPcount + 1), new Integer(xga.curx), new Integer(xga.cury),
-                                        new Integer((xga.curx + xga.MAPcount) & 0x0fff),
-                                        new Integer((xga.cury + xga.MIPcount + 1) & 0x0fff), new Integer(val & 0xffff)}));
+                        Log.log_msg(
+                            StringHelper.sprintf("XGA: Draw wait rect, w/h(%3d/%3d), x/y1(%3d/%3d), x/y2(%3d/%3d), %4x",
+                                new Object[] { Integer.valueOf(xga.MAPcount + 1), Integer.valueOf(xga.MIPcount + 1),
+                                    Integer.valueOf(xga.curx), Integer.valueOf(xga.cury),
+                                    Integer.valueOf(xga.curx + xga.MAPcount & 0x0fff),
+                                    Integer.valueOf(xga.cury + xga.MIPcount + 1 & 0x0fff),
+                                    Integer.valueOf(val & 0xffff) }));
                 }
                 break;
             case 6: /* BitBLT */
@@ -1168,7 +1209,9 @@ public class VGA_xga {
             case 7: /* Pattern fill */
                 if (XGA_SHOW_COMMAND_TRACE)
                     Log.log_msg(StringHelper.sprintf("XGA: Pattern fill: src(%3d/%3d), dest(%3d/%3d), fill(%3d/%3d)",
-                            new Object[]{new Integer(xga.curx), new Integer(xga.cury), new Integer(xga.destx), new Integer(xga.desty), new Integer(xga.MAPcount), new Integer(xga.MIPcount)}));
+                        new Object[] { Integer.valueOf(xga.curx), Integer.valueOf(xga.cury), Integer.valueOf(xga.destx),
+                            Integer.valueOf(xga.desty), Integer.valueOf(xga.MAPcount),
+                            Integer.valueOf(xga.MIPcount) }));
                 XGA_DrawPattern(val);
                 break;
             default:
@@ -1177,30 +1220,30 @@ public class VGA_xga {
         }
     }
 
-    static private long XGA_SetDualReg(/*Bit32u*/long reg, /*Bitu*/int val) {
+    private static long XGA_SetDualReg(/*Bit32u*/long reg, /*Bitu*/int val) {
         long result = reg;
         switch (XGA_COLOR_MODE()) {
             case VGA.M_LIN8:
-                result = (val & 0xff);
+                result = val & 0xff;
                 break;
             case VGA.M_LIN15:
             case VGA.M_LIN16:
-                result = (val & 0xffff);
+                result = val & 0xffff;
                 break;
             case VGA.M_LIN32:
                 if ((xga.control1 & 0x200) != 0)
                     result = val;
                 else if ((xga.control1 & 0x10) != 0)
-                    result = (result & 0x0000ffff) | (val << 16);
+                    result = result & 0x0000ffff | val << 16;
                 else
-                    result = (result & 0xffff0000l) | (val & 0x0000ffff);
+                    result = result & 0xffff0000L | val & 0x0000ffff;
                 xga.control1 ^= 0x10;
                 break;
         }
         return result;
     }
 
-    static private /*Bitu*/int XGA_GetDualReg(/*Bit32u*/long reg) {
+    private static /*Bitu*/int XGA_GetDualReg(/*Bit32u*/long reg) {
         switch (XGA_COLOR_MODE()) {
             case VGA.M_LIN8:
                 return (int) (reg & 0xff);
@@ -1208,16 +1251,20 @@ public class VGA_xga {
             case VGA.M_LIN16:
                 return (/*Bit16u*/int) (reg & 0xffff);
             case VGA.M_LIN32:
-                if ((xga.control1 & 0x200) != 0) return (int) reg;
+                if ((xga.control1 & 0x200) != 0)
+                    return (int) reg;
                 xga.control1 ^= 0x10;
-                if ((xga.control1 & 0x10) != 0) return (int) reg & 0x0000ffff;
-                else return (int) (reg >>> 16);
+                if ((xga.control1 & 0x10) != 0)
+                    return (int) reg & 0x0000ffff;
+                else
+                    return (int) (reg >>> 16);
         }
         return 0;
     }
 
-    static public void VGA_SetupXGA() {
-        if (!Dosbox.IS_VGA_ARCH()) return;
+    public static void VGA_SetupXGA() {
+        if (!Dosbox.IS_VGA_ARCH())
+            return;
 
         xga = new XGAStatus();
 
@@ -1352,7 +1399,8 @@ public class VGA_xga {
             /*Bit16u*/ int cmd;
             /*Bit16u*/ int curx, cury;
             /*Bit16u*/ int x1, y1, x2, y2, sizex, sizey;
-            /*Bit32u*/ long data; /* transient data passed by multiple calls */
+            /*Bit32u*/ long data;
+            /* transient data passed by multiple calls */
             /*Bitu*/ int datasize;
             /*Bitu*/ int buswidth;
         }
